--- a/inventory/mycluster/group_vars/all.yml
+++ b/inventory/mycluster/group_vars/all.yml
@@ -1,7 +1,7 @@
 ---
 # Global variables for Kubespray run
 ansible_user: ubuntu            # Change if your image uses a different SSH user
-ansible_ssh_private_key_file: ~/.ssh/id_rsa  # Path on control host running Ansible
+# ansible_ssh_private_key_file: ~/.ssh/id_rsa  # Path on control host running Ansible
 kube_network_plugin: calico
 kube_version: "v1.27.6"       # adjust as needed
 kubespray_branch: release-1.27 # branch to checkout for Kubespray
