--- a/playbooks/kubespray-wrapper.yml
+++ b/playbooks/kubespray-wrapper.yml
@@ -68,8 +68,17 @@
 
     - name: Run Kubespray cluster deploy
       ansible.builtin.command:
-        cmd: >
-          "{{ kubespray_dir }}/.venv/bin/ansible-playbook -i {{ kubespray_dir }}/inventory/mycluster/hosts.yaml {{ kubespray_dir }}/cluster.yml -b -v"
+        # cmd: >
+        #   "{{ kubespray_dir }}/.venv/bin/ansible-playbook -i {{ kubespray_dir }}/inventory/mycluster/hosts.yaml {{ kubespray_dir }}/cluster.yml -b -v"
+        - name: Run Kubespray cluster deploy
+      command:
+        - ./kubespray/.venv/bin/ansible-playbook
+        - -i
+        - ./kubespray/inventory/mycluster/hosts.yaml
+        - ./kubespray/cluster.yml
+        - -b
+        - -v
+
       environment:
         ANSIBLE_CONFIG: "{{ playbook_dir }}/../ansible.cfg"
       args:
