fix: try a fix to resolve the 'ansible-playbook binary not found' error

--- a/playbooks/kubespray-wrapper.yml
+++ b/playbooks/kubespray-wrapper.yml
@@ -69,7 +69,7 @@
     - name: Run Kubespray cluster deploy
       ansible.builtin.command:
         argv:
-          - ./kubespray/.venv/bin/ansible-playbook
+          - .{{ kubespray_dir }}/.venv/bin/ansible-playbook
           - -i
           - ./kubespray/inventory/mycluster/hosts.yaml
           - ./kubespray/cluster.yml
