fix: use absolute path to indicate where the inventory is located at

--- a/playbooks/kubespray-wrapper.yml
+++ b/playbooks/kubespray-wrapper.yml
@@ -71,7 +71,7 @@
         argv:
           - ./.venv/bin/ansible-playbook
           - -i
-          - inventory/mycluster/hosts.yaml
+          - "{{ playbook_dir }}/../inventory/mycluster/hosts.yaml"
           - cluster.yml
           - -b
           - -v
