--- a/playbooks/kubespray-wrapper.yml
+++ b/playbooks/kubespray-wrapper.yml
@@ -78,7 +78,7 @@
         argv:
           - ./.venv/bin/ansible-playbook
           - -i
-          - "{{ playbook_dir }}/../inventory/mycluster/hosts.yaml"
+          - "../../inventory/mycluster/hosts.yaml"
           - cluster.yml
           - -b
           - -v
