--- a/playbooks/kubespray-wrapper.yml
+++ b/playbooks/kubespray-wrapper.yml
@@ -67,9 +67,9 @@
 
     - name: Install Kubespray Python requirements
       ansible.builtin.command:
-        cmd: "{{ kubespray_dir }}/.venv/bin/python3 -m pip install -r requirements.txt"
-      args:
-        chdir: "{{ kubespray_dir }}"
+        cmd: "{{ kubespray_dir }}/.venv/bin/python -m pip install -r {{ kubespray_dir }}/requirements.txt"
+      # args:
+      #   chdir: "{{ kubespray_dir }}"
 
     - name: Install Kubespray Galaxy roles
       ansible.builtin.command:
