fix: remove the 'Install Kubespray Galaxy Roles' modules

--- a/playbooks/kubespray-wrapper.yml
+++ b/playbooks/kubespray-wrapper.yml
@@ -71,11 +71,11 @@
       # args:
       #   chdir: "{{ kubespray_dir }}"
 
-    - name: Install Kubespray Galaxy roles
-      ansible.builtin.command:
-        cmd: "{{ kubespray_dir }}/.venv/bin/ansible-galaxy install -r {{ kubespray_dir }}/requirements.yml"
-      args:
-        chdir: "{{ kubespray_dir }}"
+    # - name: Install Kubespray Galaxy roles
+    #   ansible.builtin.command:
+    #     cmd: "{{ kubespray_dir }}/.venv/bin/ansible-galaxy install -r {{ kubespray_dir }}/requirements.yml"
+    #   args:
+    #     chdir: "{{ kubespray_dir }}"
 
     # -------------------------------------------------------------
     # 5. Inventory setup
