--- a/inventory/mycluster/hosts.yaml
+++ b/inventory/mycluster/hosts.yaml
@@ -1,4 +1,6 @@
 all:
+  vars:
+      ansible_user: ubuntu
   hosts:
     # Control plane hosts (defaults inferred from modules' defaults).
     k8s-cp-1:
