--- a/inventory/mycluster/hosts.yaml
+++ b/inventory/mycluster/hosts.yaml
@@ -1,6 +1,7 @@
 all:
   vars:
       ansible_user: ubuntu
+      ansible_ssh_private_key_file: /home/ubuntu/.ssh/protocoast_terraform_key.pem
   hosts:
     # Control plane hosts (defaults inferred from modules' defaults).
     k8s-cp-1:
