--- a/inventory/mycluster/inventory.ini
+++ b/inventory/mycluster/inventory.ini
@@ -12,16 +12,16 @@ ansible_ssh_private_key_file=/home/ubuntu/.ssh/protocoast_terraform_key.pem
 
 
 [kube_control_plane]
-k8s-cp-1 ansible_host=10.0.1.57  ip=10.0.1.57 etcd_member_name=etcd1
-k8s-cp-2 ansible_host=10.0.1.59   ip=10.0.1.59 etcd_member_name=etcd2
-k8s-cp-3 ansible_host=10.0.1.208  ip=10.0.1.208 etcd_member_name=etcd3
+k8s-cp-1 ansible_host=10.0.1.10   ip=10.0.1.10  etcd_member_name=etcd1
+k8s-cp-2 ansible_host=10.0.1.70   ip=10.0.1.70  etcd_member_name=etcd2
+k8s-cp-3 ansible_host=10.0.1.143  ip=10.0.1.143 etcd_member_name=etcd3
 
-[etcd:children]
+[etcd]
 kube_control_plane
 
 [kube_node]
-k8s-worker-1 ansible_host=10.0.1.205   ip=10.0.1.205
-k8s-worker-2 ansible_host=10.0.1.112  ip=10.0.1.112
+k8s-worker-1 ansible_host=10.0.1.204   ip=10.0.1.204
+k8s-worker-2 ansible_host=10.0.1.174   ip=10.0.1.174
 k8s-worker-3 ansible_host=10.0.1.169   ip=10.0.1.169
 
 [k8s_cluster:children]
